--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
   </section>
 
   <section id="objetivos">
+    <h2>Que son los Objetivos Smart:</h2>
+    <ul>
+      <li>Específicos: Claros y concretos</li>
+      <li>Medibles: Con indicadores claros</li>
+      <li>Alcanzables: Realistas y posibles</li>
+      <li>Relevantes: Importantes para el negocio</li>
+      <li>Temporales: Con un plazo definido</li>
     <h2>Objetivos SMART</h2>
     <ul>
       <li>Atraer 10 clientes potenciales en el primer mes</li>
