--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Servicios de Desarrollo de Software</title>
+  <title>Form Resolver</title>
   <link rel="stylesheet" href="Style/style.css">
+  <link rel="shortcut icon" href="Assets/office.ico" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -38,6 +39,7 @@
       <li>Alcanzables: Realistas y posibles</li>
       <li>Relevantes: Importantes para el negocio</li>
       <li>Temporales: Con un plazo definido</li>
+    </ul>
     <h2>Objetivos SMART</h2>
     <ul>
       <li>Atraer 10 clientes potenciales en el primer mes</li>
